--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,27 @@
   </head>
 
   <body>
+
+      <div class="container">
+      <nav>
+        <% if current_user != nil %>
+          <a href="/">Delivery Tracker</a>
+          | 
+          <a href="/users/edit">Edit profile</a>
+          | 
+          <a href="/users/sign_out">Sign out</a>
+        <% else %>
+          <a href="/users/sign_up">Sign up</a>
+          | 
+          <a href="/users/sign_in">Sign in</a>
+        <% end %>
+      </nav>
+      <hr>
+      <% flash.each do |key, message| %>
+        <div class="alert alert-<%= key %>"><%= message %></div>
+      <% end %>
+
     <%= yield %>
+    </div>
   </body>
 </html>
