--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -34,17 +34,17 @@
       </dd>
 
       <dt>
-        Supposed to arrive on
-      </dt>
-      <dd>
-        <%= @the_delivery.supposed_to_arrive_on %>
-      </dd>
-
-      <dt>
         Details
       </dt>
       <dd>
         <%= @the_delivery.details %>
+      </dd>
+
+      <dt>
+        Supposed to arrive on
+      </dt>
+      <dd>
+        <%= @the_delivery.supposed_to_arrive_on %>
       </dd>
 
       <dt>
@@ -98,19 +98,19 @@
       </div>
 
       <div>
+        <label for="details_box">
+          Details
+        </label>
+
+        <textarea id="details_box" name="query_details"><%= @the_delivery.details %></textarea>
+      </div>
+
+      <div>
         <label for="supposed_to_arrive_on_box">
           Supposed to arrive on
         </label>
 
         <input type="date" id="supposed_to_arrive_on_box" name="query_supposed_to_arrive_on" value="<%= @the_delivery.supposed_to_arrive_on %>">
-      </div>
-
-      <div>
-        <label for="details_box">
-          Details
-        </label>
-
-        <input type="text" id="details_box" name="query_details" value="<%= @the_delivery.details %>">
       </div>
 
       <div>
@@ -127,5 +127,3 @@
     </form>
   </div>
 </div>
-
-<hr>
