added another exclamation mark

--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -92,7 +92,7 @@
   <div class="row received">
     <div class="col">
 
-      <h2>Received!</h2>
+      <h2>Received!!!</h2>
 
       <ul class="list-group">
         <% @deliveries_received.each do |a_delivery|%>
