got rid of exclamation

--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -5,7 +5,7 @@
       Delivery Tracker
     </h1>
 
-    <p>Know if something gets lost in the mail!</p>
+    <p>Know if something gets lost in the mail</p>
   </div>
 </div>
 
@@ -13,7 +13,7 @@
 <div class="row">
   <div class="col">
     <h2>
-      Are you expecting a package?
+      Are you expecting a package???
     </h2>
 
     <form action="/insert_delivery" method="post">
@@ -92,7 +92,7 @@
   <div class="row received">
     <div class="col">
 
-      <h2>Received!!!</h2>
+      <h2>Received!</h2>
 
       <ul class="list-group">
         <% @deliveries_received.each do |a_delivery|%>
