added exclamation marks

--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -58,7 +58,7 @@
   <div class="row waiting_on">
     <div class="col">
 
-      <h2>Waiting on (something small)</h2>
+      <h2>Waiting on!</h2>
 
       <ul class="list-group">
         <% @deliveries_waiting.each do |a_delivery|%>
@@ -92,7 +92,7 @@
   <div class="row received">
     <div class="col">
 
-      <h2>Received!</h2>
+      <h2>Received!!</h2>
 
       <ul class="list-group">
         <% @deliveries_received.each do |a_delivery|%>
